--- a/Stephen/assets/css/style.css
+++ b/Stephen/assets/css/style.css
@@ -68,7 +68,28 @@ button:hover {
 
 
        /* Media Queries */
- 
+ /* Large Screens */
+@media screen and (min-width: 1200px) {
+    .container {
+        width: 1000px;
+        max-width: 80%;
+        padding: 30px;
+    }
+
+    h1 {
+        font-size: 3vw;
+    }
+
+    button {
+        max-width: 400px;
+        font-size: 1.5vw;
+        padding: 1rem 2rem;
+    }
+
+    .button-group {
+        gap: 2rem;
+    }
+}
          /* Tablets */
 @media screen and (max-width: 768px) {
     body {
